--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "test:watch": "jest --maxWorkers=25% --watch --onlyChanged",
     "test:ci": "jest --color --runInBand --ci",
     "lint": "concurrently yarn:lint:*",
-    "lint:eslint": "eslint packages/**/src/ --ext .ts,.tsx --config .eslintrc",
+    "lint:eslint": "eslint --ext .ts,.tsx ./packages/**/src/*",
     "lint:types": "tsc --noEmit",
     "commit": "git-cz",
     "changelog:gen": "ts-node scripts/changelog-generate.ts",
     "changelog:write": "ts-node scripts/changelog-write.ts",
-    "release": "changeset publish"
+    "pkg:add": "plop --plopfile ./plopfile.js",
+    "release": "changeset publish",
+    "prestorybook": "rimraf node_modules/.cache/storybook",
+    "storybook": "start-storybook -p 6006",
+    "build:storybook": "build-storybook && sb extract"
   },
   "keywords": [],
   "author": "",
@@ -44,6 +48,8 @@
     "@emotion/jest": "^11.8.0",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
+    "@fontsource/open-sans": "^4.5.6",
+    "@fontsource/poppins": "^4.5.3",
     "@jest/types": "^27.5.1",
     "@manypkg/cli": "^0.19.1",
     "@preconstruct/cli": "^2.1.5",
@@ -56,7 +62,9 @@
     "@storybook/react": "^6.4.19",
     "@storybook/theming": "^6.4.19",
     "@swc-node/jest": "^1.4.3",
+    "@testing-library/react": "^12.1.3",
     "@types/jest": "^27.4.1",
+    "@types/lodash": "^4.14.180",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
@@ -79,7 +87,16 @@
     "jest": "^27.5.1",
     "jest-environment-jsdom": "^27.5.1",
     "jest-watch-typeahead": "^1.0.0",
-    "ts-node": "^10.5.0"
+    "lodash": "^4.17.21",
+    "node-plop": "^0.30.0",
+    "plop": "^3.0.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "rimraf": "^3.0.2",
+    "storybook-addon-performance": "^0.16.1",
+    "ts-node": "^10.5.0",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.5"
   },
   "config": {
     "commitizen": {
