feat(input): inputbox with default styling

--- a/.eslintrc
+++ b/.eslintrc
@@ -78,7 +78,10 @@
     "import/no-named-as-default": "off",
     "prefer-object-spread": "off",
     "arrow-body-style": "off",
-    "react/sort-comp": "off"
+    "react/sort-comp": "off",
+    // suppress errors for missing 'import React' in files
+    "react/react-in-jsx-scope": "off",
+    "react/jsx-key": "off"
   },
   "overrides": [
     {
